// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InputStepper Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of InputStepper in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="InputStepper__StyledInputStepper-ivJAV hFzPsM"
          >
            <label
              className="InputField__Field-hAVqzR gZONT"
              data-test={undefined}
            >
              <div
                className="InputField__InputContainer-evnRDD bHPfak"
              >
                <div
                  className="InputField__Prefix-jLQUQe kptaFf"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW InputStepper__PrefixSuffix-gHmTGb hrfOwJ"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fSokFV"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  className="InputField__Input-iRjCvp jIplxp"
                  disabled={undefined}
                  max={undefined}
                  maxLength={undefined}
                  min={undefined}
                  minLength={undefined}
                  name={undefined}
                  onBlur={undefined}
                  onChange={[Function]}
                  onFocus={undefined}
                  onKeyDown={[Function]}
                  onKeyUp={undefined}
                  placeholder={undefined}
                  type="number"
                  value={0}
                />
                <div
                  className="InputField__Suffix-csEOAt jWXkdw"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW InputStepper__PrefixSuffix-gHmTGb hrfOwJ"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fSokFV"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="InputField__FakeInput-eneioc jmDeFv"
                />
              </div>
            </label>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      InputStepper
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onChange()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InputStepper Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of InputStepper in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="InputStepper__StyledInputStepper-ivJAV hFzPsM"
          >
            <label
              className="InputField__Field-hAVqzR gZONT"
              data-test={undefined}
            >
              <span
                className="FormLabel-kJFBRQ irIxpQ"
                data-test={undefined}
              >
                <span>
                  Label
                </span>
              </span>
              <div
                className="InputField__InputContainer-evnRDD kmFqfB"
              >
                <div
                  className="InputField__Prefix-jLQUQe kptaFf"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW InputStepper__PrefixSuffix-gHmTGb hrfOwJ"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fSokFV"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  className="InputField__Input-iRjCvp jIplxp"
                  disabled={false}
                  max={10}
                  maxLength={undefined}
                  min={1}
                  minLength={undefined}
                  name={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={undefined}
                  placeholder={undefined}
                  type="number"
                  value={4}
                />
                <div
                  className="InputField__Suffix-csEOAt jWXkdw"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW InputStepper__PrefixSuffix-gHmTGb hrfOwJ"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fSokFV"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="InputField__FakeInput-eneioc ePWTWp"
                />
              </div>
              <div
                className="FormFeedback__StyledFormFeedback-cuFyWp cFaoou"
                data-test={undefined}
              >
                Error message (explain how to solve it)
              </div>
            </label>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      InputStepper
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Label
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          defaultValue
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                4
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              normal
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          step
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                2
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          error
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Error message (explain how to solve it)
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          help
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#777",
                                  }
                                }
                              >
                                null
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          maxValue
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                10
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          minValue
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                1
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          disabled
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          required
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          dataTest
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              test
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onChange()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onFocus
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onFocus()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onBlur
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onBlur()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InputStepper With different size 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With different size
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Here you can try InputStepper component with additional functionality.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="InputStepper__StyledInputStepper-ivJAV hFzPsM"
          >
            <label
              className="InputField__Field-hAVqzR gZONT"
              data-test={undefined}
            >
              <span
                className="FormLabel-kJFBRQ fuYBgg"
                data-test={undefined}
              >
                <span>
                  Label
                </span>
              </span>
              <div
                className="InputField__InputContainer-evnRDD bHPfak"
              >
                <div
                  className="InputField__Prefix-jLQUQe kptaFf"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW InputStepper__PrefixSuffix-gHmTGb hrfOwJ"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fSokFV"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  className="InputField__Input-iRjCvp jIplxp"
                  disabled={undefined}
                  max={undefined}
                  maxLength={undefined}
                  min={undefined}
                  minLength={undefined}
                  name={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={undefined}
                  placeholder={undefined}
                  type="number"
                  value={0}
                />
                <div
                  className="InputField__Suffix-csEOAt jWXkdw"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW InputStepper__PrefixSuffix-gHmTGb hrfOwJ"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fSokFV"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="InputField__FakeInput-eneioc jmDeFv"
                />
              </div>
            </label>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      InputStepper
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Label
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              normal
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onChange()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onFocus
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onFocus()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onBlur
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onBlur()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InputStepper With help 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With help
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Here you can try InputStepper component with additional functionality.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="InputStepper__StyledInputStepper-ivJAV hFzPsM"
          >
            <label
              className="InputField__Field-hAVqzR gZONT"
              data-test={undefined}
            >
              <span
                className="FormLabel-kJFBRQ fuYBgg"
                data-test={undefined}
              >
                <span>
                  Aduls
                </span>
              </span>
              <div
                className="InputField__InputContainer-evnRDD bHPfak"
              >
                <div
                  className="InputField__Prefix-jLQUQe kptaFf"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW InputStepper__PrefixSuffix-gHmTGb hrfOwJ"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fSokFV"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  className="InputField__Input-iRjCvp jIplxp"
                  disabled={undefined}
                  max={undefined}
                  maxLength={undefined}
                  min={undefined}
                  minLength={undefined}
                  name={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={undefined}
                  placeholder={undefined}
                  type="number"
                  value={0}
                />
                <div
                  className="InputField__Suffix-csEOAt jWXkdw"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW InputStepper__PrefixSuffix-gHmTGb hrfOwJ"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fSokFV"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="InputField__FakeInput-eneioc jmDeFv"
                />
              </div>
              <div
                className="FormFeedback__StyledFormFeedback-cuFyWp hVyVwg"
                data-test={undefined}
              >
                You need to enter count of adults
              </div>
            </label>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      InputStepper
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Aduls
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              normal
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          help
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              You need to enter count of adults
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onChange()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onFocus
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onFocus()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onBlur
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onBlur()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
